# CPlusPlusMastermind

./: .gitignore  .replit  Pasted-Press-CTRL-C-to-quit-Restarting-with-stat-Debugger-is-active-Debugger-PIN-973-804-197--1727761484902.txt  Pasted-aceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pac-1727761595897.txt  README.md  app.py  config.py  main.py  pyproject.toml  setup_and_run.sh
data_collection/: bitbucket_scraper.py  github_scraper.py  gitlab_scraper.py  kaggle_scraper.py  sourceforge_scraper.py  stackoverflow_scraper.py  website_scraper.py
data_processing/: code_cleaner.py  dataset_organizer.py
database/: db_operations.py  db_schema.sql  initialize_db.py
model_fine_tuning/: fine_tune.py
templates/: index.html
